# pipenv-uv-migrate

./: .deepsource.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  snyk.yml  test.yml
pipenv_uv_migrate/: __init__.py  __main__.py  migration.py
scripts/: format.sh  lint.sh  release.sh  test.sh
tests/: conftest.py  test_loader.py  test_main.py  test_migration.py  test_pipenv_uv_migrate.py
tests/testdata/toml/: Pipfile  Pipfile_single_source  broken_pyproject.toml  expect_pyproject.toml  expect_single_source_pyproject.toml  pyproject.toml
