[project]
name = "pipenv-uv-migrate-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoshiyuki HINO", email = "yhinoz@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pipenv-uv-migrate-test = "pipenv_uv_migrate_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
